--- a/film.html
+++ b/film.html
@@ -17,10 +17,9 @@
 			href="mdb5-standard-UI-kit-free-6.0.1/css/mdb.min.css"
 			rel="stylesheet"
 		/>
-		<script src="mdb5-standard-UI-kit-free-6.0.1/js/mdb.min.js" defer></script>
+	
 		<link rel="stylesheet" href="styly.css" />
-		<script src="spolecne.js" type="module"></script>
-		<script src="film.js" type="module"></script>
+
 	</head>
 	<body>
 		<!-- Navigace -->
@@ -174,5 +173,9 @@
 				</div>
 			</div>
 		</div>
+		<script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+		<script src="mdb5-standard-UI-kit-free-6.0.1/js/mdb.min.js" defer></script>
+		<script src="spolecne.js"></script>
+		<script src="film.js"></script>
 	</body>
 </html>
