--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			href="mdb5-standard-UI-kit-free-6.0.1/css/mdb.min.css"
 			rel="stylesheet"
 		/>
-		<script src="mdb5-standard-UI-kit-free-6.0.1/js/mdb.min.js" defer></script>
+		
 		<link rel="stylesheet" href="styly.css" />
-		<script src="spolecne.js" type="module"></script>
+	
 	</head>
 	<body class="landing-page">
 		<!-- Navigace -->
@@ -66,5 +66,7 @@
 				</div>
 			</div>
 		</div>
+		<script src="mdb5-standard-UI-kit-free-6.0.1/js/mdb.min.js" defer></script>
+		<script src="spolecne.js"></script>
 	</body>
 </html>
