--- a/o-webu.html
+++ b/o-webu.html
@@ -17,9 +17,9 @@
 			href="mdb5-standard-UI-kit-free-6.0.1/css/mdb.min.css"
 			rel="stylesheet"
 		/>
-		<script src="mdb5-standard-UI-kit-free-6.0.1/js/mdb.min.js" defer></script>
+		
 		<link rel="stylesheet" href="styly.css" />
-		<script src="spolecne.js" type="module"></script>
+		
 	</head>
 	<body>
 		<!-- Navigace -->
@@ -60,5 +60,7 @@
 				včetně csfd.cz.
 			</p>
 		</main>
+		<script src="mdb5-standard-UI-kit-free-6.0.1/js/mdb.min.js" defer></script>
+		<script src="spolecne.js"></script>
 	</body>
 </html>
