--- a/seznam.html
+++ b/seznam.html
@@ -17,10 +17,9 @@
 			href="mdb5-standard-UI-kit-free-6.0.1/css/mdb.min.css"
 			rel="stylesheet"
 		/>
-		<script src="mdb5-standard-UI-kit-free-6.0.1/js/mdb.min.js" defer></script>
+		
 		<link rel="stylesheet" href="styly.css" />
-		<script src="spolecne.js" type="module"></script>
-		<script src="seznam.js" type="module"></script>
+
 	</head>
 	<body>
 		<!-- Navigace -->
@@ -87,5 +86,8 @@
 				</div>
 			</div>
 		</div>
+		<script src="mdb5-standard-UI-kit-free-6.0.1/js/mdb.min.js" defer></script>
+		<script src="spolecne.js"></script>
+		<script src="seznam.js"></script>
 	</body>
 </html>
